lgr/main/default/objects/lgr_LogEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>=&gt; lgr_Log__c.Message__c</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>