lgr/main/default/objects/lgr_LogEvent__e/fields/Occured__c.field-meta.xml
<CustomField>
    <fullName>Occured__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>=&gt; lgr_Log__c.Occured__c</description>
    <label>Occured</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>