lgr/main/default/objects/lgr_LogEvent__e/fields/Save__c.field-meta.xml
<CustomField>
    <fullName>Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>=&gt; lgr_Log__c.Save__c</description>
    <label>Save</label>
    <type>Checkbox</type>
</CustomField>